# Notesman

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NOTICES  README.md  vcpkg.json
.github/workflows/: build-and-release-linux.yml  linux_build_release.yml  release.yml
resources/: app_vi.qm  dark.qss  light.qss  notes_manager_schema.sql  resources.qrc
src/: CMakeLists.txt  main.cpp  pch_qt.hpp  pch_stl.hpp
src/app/: AppController.cpp  AppController.hpp  AppInitializer.cpp  AppInitializer.hpp  NotesAppCore.cpp  NotesAppCore.hpp
src/core/db/: database_checker.cpp  database_checker.hpp  sqldb_raii.hpp
src/core/model/: model.hpp
src/core/repository/: file_repository.cpp  file_repository.hpp  resource_repository.cpp  resource_repository.hpp  tag_repository.cpp  tag_repository.hpp  text_content_repository.cpp  text_content_repository.hpp
src/core/service/: file_service.cpp  file_service.hpp  resource_service.cpp  resource_service.hpp
src/core/settings/: AppSettings.cpp  AppSettings.hpp
src/gui/: MainWindow.cpp  MainWindow.hpp  UiConstants.hpp
src/gui/Highlighter/: CodeEditorLineHighlighter.cpp  CodeEditorLineHighlighter.hpp  cpphighlighter.cpp  cpphighlighter.hpp  cpphighlightertheme.hpp
src/gui/TagInput/: TagInput.cpp  TagInput.hpp
src/gui/Widgets/: AddTabWidget.cpp  AddTabWidget.hpp  BrowseTabWidget.cpp  BrowseTabWidget.hpp  SettingsTabWidget.cpp  SettingsTabWidget.hpp
src/helper/: FontLoader.cpp  FontLoader.hpp  ResultsTable.cpp  ResultsTable.hpp  helper.hpp
tests/: CMakeLists.txt  test_AppSettings.cpp  test_file_repository.cpp  test_file_service.cpp  test_mainwindow_tabs.cpp  test_model_utils.cpp  test_resource_repository.cpp  test_resource_service.cpp  test_sqldb_raii.cpp  test_tag_repository.cpp  test_text_content_repository.cpp
vcpkg-triplets/: x64-linux-dynamic.cmake
